# rox

./: Cargo.toml  README.md  flake.nix
.github/workflows/: mirror.yaml
programs/: simple-program.rox
src/: environment.rs  error.rs  expression.rs  interpreter.rs  keywords.rs  macros.rs  main.rs  parser.rs  scanner.rs  token.rs
