[package]
name = "rox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
env_logger = "0.9.1"
itertools = "0.10.5"
log = "0.4.17"
thiserror = "1.0.37"

[dev-dependencies]
test-log = "0.2.11"
